Working CMakeLists for tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,13 @@
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(first_test first_test.cpp add.cpp)
+find_package(GTest REQUIRED)
+
+add_executable(first_test
+    first_test.cpp
+    add.cpp
+)
+
+target_link_libraries(first_test
+    PRIVATE
+        GTest::gtest
+        GTest::gtest_main
+)
