--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "eigen"]
 	path = eigen
-	url = https://gitlab.com/libeigen/eigen
-	branch = master
+	url = https://gitlab.com/libeigen/eigen.git
