--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(PCSC_Eigenvalue_Solver_Project)
 
 set(CMAKE_CXX_STANDARD 20)
 
+enable_testing()   
+
 # Add Eigen
 add_library(eigen_interface INTERFACE)
 target_include_directories(eigen_interface INTERFACE
