Added solve_shifted.hpp in the power_method/ directory. Also changed all Scalar templates to include ScalarConcept, and modified the ScalarConcept to include complex types in addition to real types. Furthermore, made a test to test solve_shifted method in the test/ directory and updated corresponding CMakeLists in the test/ directory.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,5 +12,18 @@ target_link_libraries(matrix_wrapper_test
         GTest::gtest_main
 )
 
-
 add_test(NAME matrix_wrapper_test COMMAND matrix_wrapper_test)
+
+add_executable(solve_shifted_test
+    solve_shifted_test.cpp
+)
+
+target_link_libraries(solve_shifted_test
+    PRIVATE
+        PCSC_Eigenvalue_Solver_Project_Library
+        GTest::gtest
+        GTest::gtest_main
+)
+
+add_test(NAME solve_shifted_test COMMAND solve_shifted_test)
+
