Updated Matrix class and file structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,10 @@ target_include_directories(eigen_interface INTERFACE
 
 
 add_library(PCSC_Eigenvalue_Solver_Project_Library
-    power_method/power_solver.cpp
-    power_method/shifted_inverse_power_solver.cpp
-    qr_method/qr_factoriser.cpp
-    qr_method/qr_method.cpp
+    src/power_method/power_solver.cpp
+    src/power_method/shifted_inverse_power_solver.cpp
+    src/qr_method/qr_factoriser.cpp
+    src/qr_method/qr_method.cpp
 )
 
 target_include_directories(PCSC_Eigenvalue_Solver_Project_Library PUBLIC
