Created tests for the Hessenberg transform, QR decomposition, and QR iteration methods in qr_algorithms_test.cpp. Also made minor changes to other files such as replacing with Vector<Scalar>. Added information of work done so far to readme file in root.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,3 +27,15 @@ target_link_libraries(solve_shifted_test
 
 add_test(NAME solve_shifted_test COMMAND solve_shifted_test)
 
+add_executable(qr_algorithms_test
+    qr_algorithms_test.cpp
+)
+
+target_link_libraries(qr_algorithms_test
+    PRIVATE
+        PCSC_Eigenvalue_Solver_Project_Library
+        GTest::gtest
+        GTest::gtest_main
+)
+
+add_test(NAME qr_algorithms_test COMMAND qr_algorithms_test)
